--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.8",
     "framer-motion": "^10.18.0",
     "next": "^14.1.0",
+    "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
