Исправлены конфигурации для Lume проекта и добавлены улучшения пользовательского интерфейса

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,10 +1,12 @@
 # DeepSeek API Key
-DEEPSEEK_API_KEY=your_deepseek_api_key_here
+DEEPSEEK_API_KEY=your_deepseek_api_key
 
 # Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+NEXT_PUBLIC_SUPABASE_URL=https://qegmlgtamtmwpmidyxmz.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 
 # Настройки приложения
 NEXT_PUBLIC_APP_NAME=Lume
-NEXT_PUBLIC_API_URL=http://localhost:3000/api 
+NEXT_PUBLIC_API_URL=https://api.lume-learning.ru
+NEXT_PUBLIC_DEEP_SEEK_ENABLED=false
+NEXT_PUBLIC_WEBHOOK_URL=https://api.lume-learning.ru/api/notifications/send 
