--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-textarea-autosize": "^8.5.9"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
