config: обновлены переменные окружения Supabase в vercel.json, добавлен service role key

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "env": {
     "NEXT_PUBLIC_SUPABASE_URL": "https://ngkmcwyekrigjnfsjsjr.supabase.co",
     "NEXT_PUBLIC_SUPABASE_ANON_KEY": "sb_publishable_QCXPjWCA6GnYpJvZkJ3GNw_0iZ9zxaq",
+    "SUPABASE_SERVICE_ROLE_KEY": "sb_secret_Ht8ddCLKJ1zjGUoxeDlh4g_VSxxJZJM",
     "NEXT_PUBLIC_API_URL": "https://api.lume-learning.ru",
     "NEXT_PUBLIC_DEEP_SEEK_ENABLED": "false",
     "NEXT_PUBLIC_WEBHOOK_URL": "https://api.lume-learning.ru/api/notifications/send",
